--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-Scheduler Embedded Service
-
-This is the public site to host my embedded services public site test for Scheduler widget.
-
+<!DOCTYPE html>
+<html>
+<head></head>
 <body> 
-  <style type='text/css'>
+Scheduler Embedded Service
+<p>
+This is the public site to host my embedded services public site test for Scheduler widget.	
+<style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
 		background-color: #005290;
 		font-family: "Arial", sans-serif;
@@ -12,7 +14,6 @@ This is the public site to host my embedded services public site test for Schedu
 		outline: 1px solid #005290;
 	}
 </style>
-
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
 <script type='text/javascript'>
 	var initESW = function(gslbBaseURL) {
@@ -60,3 +61,4 @@ This is the public site to host my embedded services public site test for Schedu
 	}
   </script> 
 </body>
+</html>
