--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-<head><meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"></head>
-<body> 
+<!DOCTYPE html>
+<html>
+<head><meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"><title>Scheduler Embedded Service Test</title><link rel="stylesheet" href="/stylesheets/style.css"></head>
+<body>Welcome to my Scheduler Embedded Services test. 
 <style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
 		background-color: #005290;
@@ -56,3 +58,4 @@
 	}
   </script> 
 </body>
+</html>
