--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<head><meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"><title>Scheduler Embedded Service Test</title></head>
+<head><meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"><link rel="stylesheet" href="/stylesheets/style.css"><title>Scheduler Embedded Service Test</title></head>
 <body>Welcome to my Scheduler Embedded Services test. 
 <style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
