--- a/callback.html
+++ b/callback.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="salesforce-community" content="https://isvsi-14ddd2ecd93-1768a20a5c-17846c2baf5.force.com">
+<meta name="salesforce-community" content="https://isvsi-14ddd2ecd93-1768a20a5c-17846c2baf5.force.com/schedulerbutton">
 <meta name="salesforce-mode" content="popup-callback">
 <meta name="salesforce-save-access-token" content="true">
 <meta name="salesforce-allowed-domains" content="faithkindle.github.io">
