--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head><meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"><link rel="stylesheet" href="/stylesheets/style.css"><title>Scheduler Embedded Service Test</title></head>
 <body>Welcome to my Scheduler Embedded Services test. 
-<style type='text/css'>
+//<style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
 		background-color: #005290;
 		font-family: "Arial", sans-serif;
@@ -62,6 +62,11 @@
 	} else {
 		initESW('https://service.force.com');
 	}
+
+	</script>//
+	<script type='text/javascript' src='https://c.la3-c2-ia4.salesforceliveagent.com/content/g/js/53.0/deployment.js'></script>
+<script type='text/javascript'>
+liveagent.init('https://d.la3-c2-ia4.salesforceliveagent.com/chat', '5725Y000000tU1P', '00D5Y000002TyJ6');
 </script>
 </body>
 </html>
