--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		outline: 1px solid #005290;
 	}
 </style>
+
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
 <script type='text/javascript'>
 	var initESW = function(gslbBaseURL) {
@@ -39,13 +40,13 @@
 			'https://isvsi-14ddd2ecd93-1768a20a5c-17846c2baf5.force.com/schedulerfkindletestvax',
 			gslbBaseURL,
 			'00D5Y000002TyJ6',
-			'Chat_Team',
+			'Appointment_Team',
 			{
 				baseLiveAgentContentURL: 'https://c.la3-c2-ia4.salesforceliveagent.com/content',
 				deploymentId: '5725Y000000tU1K',
-				buttonId: '5735Y000000tUVN',
+				buttonId: '5735Y000000tUVS',
 				baseLiveAgentURL: 'https://d.la3-c2-ia4.salesforceliveagent.com/chat',
-				eswLiveAgentDevName: 'Chat_Team',
+				eswLiveAgentDevName: 'Appointment_Team',
 				isOfflineSupportEnabled: true
 			}
 		);
@@ -61,7 +62,6 @@
 	} else {
 		initESW('https://service.force.com');
 	}
-
-	</script>
+</script>
 </body>
 </html>
