--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 			'https://isvsi-14ddd2ecd93-1768a20a5c-17846c2baf5.force.com/schedulerfkindletestvax',
 			gslbBaseURL,
 			'00D5Y000002TyJ6',
-			'Appointment_Team',
+			'Chat_Team',
 			{
 				baseLiveAgentContentURL: 'https://c.la3-c2-ia4.salesforceliveagent.com/content',
 				deploymentId: '5725Y000000tU1K',
-				buttonId: '5735Y000000tUVS',
+				buttonId: '5735Y000000tUVN',
 				baseLiveAgentURL: 'https://d.la3-c2-ia4.salesforceliveagent.com/chat',
-				eswLiveAgentDevName: 'Appointment_Team',
+				eswLiveAgentDevName: 'Chat_Team',
 				isOfflineSupportEnabled: true
 			}
 		);
