--- a/index.html
+++ b/index.html
@@ -1,67 +1,37 @@
 <html>
+ 
+//<style type='text/css'>
+//	.embeddedServiceHelpButton .helpButton .uiButton {
+//		background-color: #005290;
+//		font-family: "Arial", sans-serif;
+//	}
+//	.embeddedServiceHelpButton .helpButton .uiButton:focus {
+//		outline: 1px solid #005290;
+//	}
+//</style>
+
+<script src="https://isvsi-14ddd2ecd93-1768a20a5c-17846c2baf5.force.com/s/lightning/lightning.out.js"></script>
 <head><meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"><link rel="stylesheet" href="/stylesheets/style.css"><title>Scheduler Embedded Service Test</title></head>
-<body>Welcome to my Scheduler Embedded Services test. 
-<style type='text/css'>
-	.embeddedServiceHelpButton .helpButton .uiButton {
-		background-color: #005290;
-		font-family: "Arial", sans-serif;
-	}
-	.embeddedServiceHelpButton .helpButton .uiButton:focus {
-		outline: 1px solid #005290;
-	}
-</style>
+<body>Welcome to my Scheduler Embedded Services test.
+    BOOKINGS 123456
+    <div id="lightningLocator">
+        
+    </div>
+</body>
 
-<script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
-<script type='text/javascript'>
-	var initESW = function(gslbBaseURL) {
-		embedded_svc.settings.displayHelpButton = true; //Or false
-		embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
+ <script>
+    $Lightning.use("runtime_appointmentbooking:lightningOutGuest",
+        function() {                  // Callback once framework and app load
+            $Lightning.createComponent(
+                "lightning:flow",    // top-level component of your app
+                { },    // attributes to set on the component when created
+                "lightningLocator",    // the DOM location to insert the component
+                function(component) {            // API name of the Flow
+                    component.startFlow("Inbound_New_Guest_Appointment_V2");
+                }
+            );
+        },    'https://isvsi-14ddd2ecd93-1768a20a5c-17846c2baf5.force.com/s/'  // Community endpoint
+    );
 
-		//embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
-		//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
-
-		//embedded_svc.settings.loadingText = ''; //(Defaults to Loading)
-		//embedded_svc.settings.storageDomain = 'yourdomain.com'; //(Sets the domain for your deployment so that visitors can navigate subdomains during a chat session)
-
-		// Settings for Chat
-		//embedded_svc.settings.directToButtonRouting = function(prechatFormData) {
-			// Dynamically changes the button ID based on what the visitor enters in the pre-chat form.
-			// Returns a valid button ID.
-		//};
-		//embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
-		//embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
-		//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
-
-		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
-		embedded_svc.settings.entryFeature = 'LiveAgent';
-
-		embedded_svc.init(
-			'https://fkindle-cdo-demo.my.salesforce.com',
-			'https://isvsi-14ddd2ecd93-1768a20a5c-17846c2baf5.force.com/schedulerfkindletestvax',
-			gslbBaseURL,
-			'00D5Y000002TyJ6',
-			'Chat_Team',
-			{
-				baseLiveAgentContentURL: 'https://c.la3-c2-ia4.salesforceliveagent.com/content',
-				deploymentId: '5725Y000000tU1K',
-				buttonId: '5735Y000000tUVN',
-				baseLiveAgentURL: 'https://d.la3-c2-ia4.salesforceliveagent.com/chat',
-				eswLiveAgentDevName: 'Chat_Team',
-				isOfflineSupportEnabled: true
-			}
-		);
-	};
-
-	if (!window.embedded_svc) {
-		var s = document.createElement('script');
-		s.setAttribute('src', 'https://fkindle-cdo-demo.my.salesforce.com/embeddedservice/5.0/esw.min.js');
-		s.onload = function() {
-			initESW(null);
-		};
-		document.body.appendChild(s);
-	} else {
-		initESW('https://service.force.com');
-	}
-</script>
 </body>
 </html>
