--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 //	}
 //</style>
 
-<script src="https://isvsi-14ddd2ecd93-1768a20a5c-17846c2baf5.force.com/s/lightning/lightning.out.js"></script>
+<script src="https://isvsi-14ddd2ecd93-1768a20a5c-17846c2baf5.force.com/lightning/lightning.out.js"></script>
 <head><meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"><link rel="stylesheet" href="/stylesheets/style.css"><title>Scheduler Embedded Service Test</title></head>
 <body>Welcome to my Scheduler Embedded Services test.
     BOOKINGS 123456
@@ -30,7 +30,7 @@
                     component.startFlow("Inbound_New_Guest_Appointment_V2");
                 }
             );
-        },    'https://isvsi-14ddd2ecd93-1768a20a5c-17846c2baf5.force.com/s/'  // Community endpoint
+        },    'https://isvsi-14ddd2ecd93-1768a20a5c-17846c2baf5.force.com'  // Community endpoint
     );
 
 </body>
