--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     component.startFlow("Inbound_New_Guest_Appointment_V2");
                 }
             );
-        },    'https://isvsi-14ddd2ecd93-1768a20a5c-17846c2baf5.force.com/s/'  // Community endpoint
+        },    'https://isvsi-14ddd2ecd93-1768a20a5c-17846c2baf5.force.com/s/scheduler'  // Community endpoint
     );
 
 </body>
