--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<html>
- 
 //<style type='text/css'>
 //	.embeddedServiceHelpButton .helpButton .uiButton {
 //		background-color: #005290;
@@ -10,26 +8,48 @@
 //	}
 //</style>
 
-<script src="https://isvsi-14ddd2ecd93-1768a20a5c-17846c2baf5.force.com/lightning/lightning.out.js"></script>
-<head><meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"><link rel="stylesheet" href="/stylesheets/style.css"><title>Scheduler Embedded Service Test</title></head>
-<body>Welcome to my Scheduler Embedded Services test.
-    <div id="lightningLocator">
+//<script src="https://isvsi-14ddd2ecd93-1768a20a5c-17846c2baf5.force.com/lightning/lightning.out.js"></script>
+//<head><meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"><link rel="stylesheet" href="/stylesheets/style.css"><title>Scheduler Embedded Service Test</title></head>
+//<body>Welcome to my Scheduler Embedded Services test.
+//    <div id="lightningLocator">
         
-    </div>
+//    </div>
 
- <script>
-    $Lightning.use("runtime_appointmentbooking:lightningOutGuest",
-        function() {                  // Callback once framework and app load
-            $Lightning.createComponent(
-                "lightning:flow",    // top-level component of your app
-                { },    // attributes to set on the component when created
-                "lightningLocator",    // the DOM location to insert the component
-                function(component) {            // API name of the Flow
-                    component.startFlow("Inbound_New_Guest_Appointment_V2");
-                }
-            );
-        },    'https://isvsi-14ddd2ecd93-1768a20a5c-17846c2baf5.force.com/s/scheduler'  // Community endpoint
-    );
+// <script>
+//    $Lightning.use("runtime_appointmentbooking:lightningOutGuest",
+//        function() {                  // Callback once framework and app load
+//            $Lightning.createComponent(
+//                "lightning:flow",    // top-level component of your app
+//                { },    // attributes to set on the component when created
+//                "lightningLocator",    // the DOM location to insert the component
+//                function(component) {            // API name of the Flow
+//                    component.startFlow("Inbound_New_Guest_Appointment_V2");
+//                }
+//            );
+//        },    'https://isvsi-14ddd2ecd93-1768a20a5c-17846c2baf5.force.com/s/scheduler'  // Community endpoint
+//    );
 
+
+<head></head>
+<body>
+    <script src="https://sandbox-234ss-cs1.cs1.stmfa.stm.force.com/234CommunityLogin/lightning/lightning.out.js"></script>
+    <script>
+        $Lightning.use("runtime_appointmentbooking:lightningOutGuest",    // name of the Lightning app
+            function() {                  
+                $Lightning.createComponent(
+                   "lightning:flow", // top-level component of your app
+                    { },                  // attributes to set on the component when created
+                    "lightningLocator",   // the DOM location to insert the component
+                    function(cmp) {
+                        console.log('Hi from callback');// callback when component is created and active on the page
+                        cmp.startFlow('Inbound_New_Guest_Appointment_V2');
+                    }
+                );
+            }, 'https://isvsi-14ddd2ecd93-1768a20a5c-17846c2baf5.force.com/s/scheduler'  // Community endpoint
+        );
+    </script>
+
+<div id="lightningLocator">
+  <p>Lightning Component mentioned in the Script is invoked from here</p>
+</div>
 </body>
-</html>
