--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 //                { },    // attributes to set on the component when created
 //                "lightningLocator",    // the DOM location to insert the component
 //                function(component) {            // API name of the Flow
-//                    component.startFlow("Inbound_New_Guest_Appointment_V2");
+//                    component.startFlow('Inbound_New_Guest_Appointment_V2');
 //                }
 //            );
 //        },    'https://isvsi-14ddd2ecd93-1768a20a5c-17846c2baf5.force.com/s/scheduler'  // Community endpoint
