--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         cmp.startFlow('Inbound_New_Guest_Appointment_V2');
                     }
                 );
-            }, 'https://isvsi-14ddd2ecd93-1768a20a5c-17846c2baf5.force.com/s/scheduler'  // Community endpoint
+            }, 'https://isvsi-14ddd2ecd93-1768a20a5c-17846c2baf5.force.com/s/'  // Community endpoint
         );
     </script>
 
