--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
-//<style type='text/css'>
-//	.embeddedServiceHelpButton .helpButton .uiButton {
-//		background-color: #005290;
-//		font-family: "Arial", sans-serif;
-//	}
-//	.embeddedServiceHelpButton .helpButton .uiButton:focus {
-//		outline: 1px solid #005290;
-//	}
-//</style>
+//<script src="https://isvsi-14ddd2ecd93-1768a20a5c-17846c2baf5.force.com/lightning/lightning.out.js"></script>
+//<head><meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"><link rel="stylesheet" href="/stylesheets/style.css"><title>Scheduler Embedded Service Test</title></head>
+//<body>Welcome to my Scheduler Embedded Services test.
+//    <div id="lightningLocator">
+        
+//    </div>
 
+// <script>
 <head></head>
 <body>
     <script src="https://isvsi-14ddd2ecd93-1768a20a5c-17846c2baf5.force.com/s/lightning/lightning.out.js"></script>
